--- a/src/styles/base/_popup.scss
+++ b/src/styles/base/_popup.scss
@@ -25,9 +25,9 @@
         position: relative;
         transition: all 0.8s ease 0s;
         opacity: 0;
-        //transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+        transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
         //transform: scale(0);
-        transform: translate(-100%, 0px);
+        //transform: translate(-100%, 0px);
         background-color: #fff;
         //color: #000;
         padding: 16px 30px;
@@ -49,9 +49,9 @@
     visibility: visible;
 }
 .popup.open .popup__content{//.popup:target .popup__content
-    //transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+    transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
     //transform: scale(1);
-    transform: translate(0%, 0px);
+    //transform: translate(0%, 0px);
     opacity: 1;
 }
 
