--- a/src/styles/blocks/_booking.scss
+++ b/src/styles/blocks/_booking.scss
@@ -33,7 +33,7 @@
 
   &__header-block {
     &:not(:last-child) {
-      margin-bottom: 50px;
+      @include adaptive-clamp("margin-bottom", 50, 25);
     }
   }
 
@@ -334,12 +334,12 @@
     position: relative;
     z-index: 1;
     background: #bcbcbc;
-    padding: 15px 20px;
-    border-radius: 3px;
+    padding: 15px 20px 25px 20px;
+    border-radius: 8px;
     max-width: 360px;
     @media (max-width: em(500)){
       max-width: 100%; 
-      padding: 8px 12px; 
+      padding: 8px 12px 15px 12px; 
     }
 
     img {
@@ -377,6 +377,8 @@
   }
 
   &__back {
+    //display: none;
+
     position: absolute;
     top: 30px;
     right: 0;
@@ -388,7 +390,7 @@
 
   &__wrapper {
     background: #939393;
-    border-radius: 3px;
+    border-radius: 8px;
     max-width: 360px;
     height: 211px;
     position: relative;
