--- a/src/styles/blocks/_explore.scss
+++ b/src/styles/blocks/_explore.scss
@@ -18,52 +18,24 @@
     }
 	}
   &__images {
-    //height: 700px;
     width: 720px;
     @media (max-width: 767.98px){
       width: 100%;
-      //height: 368px;
-      //height: auto;
-    }
-    @media (max-width: 420px){
-      //height: 280px;
     }
   }
-
 	&__header-block {
     &:not(:last-child) {
-      margin-bottom: 75px;
+      @include adaptive-clamp("margin-bottom", 75, 25);
     }
-    @media (max-width: 1024px){
-      &:not(:last-child) {
-        margin-bottom: 62px;
-      }
-    }
-    @media (max-width: 767.98px){
-      &:not(:last-child) {
-        margin-bottom: 40px;
-      }    
-    }
-
 	}
 	&__title {
 	}
   &__text {
-    @media (max-width: 1440px) {
-      margin-bottom: 60px;
-    }
-    @media (max-width: 780px){
-      display: none;        
-    }
+    @include adaptive-clamp("margin-bottom", 60, 10);
   }
 	&__text p {
     &:not(:last-child) {
-      margin-bottom: 25px;
+      @include adaptive-clamp("margin-bottom", 25, 10);
     }
 	}
-  &__text--hidden {
-    @media (max-width: 1025px){
-      display: none;        
-    }
-  }	
 } 
