--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -7,45 +7,25 @@
   position: relative;
   &__container {
   }
-
   &__header-block {
-    margin-bottom: 75px;
-    @media (max-width: 1024px){
-       margin-bottom: 60px; 
-    }
-    @media (max-width: 768px){
-       margin-bottom: 40px; 
-    }
+    @include adaptive-clamp("margin-bottom", 75, 25);
   }
-
   &__title {
   }
-
   &__items {
-    height: 1960px;
-    @media (max-width: 1024px){
-       height: 15000px; 
-    }
-    @media (max-width: 768px){
-       height: 1300px; 
-    }
-        @media (max-width: 1024px){
-       height: 820px; 
-    }
+    @include adaptive-clamp("height", 1960, 850);
   }
 
   &__inner-container {
     display: flex;
-    column-gap: 36px;
-    @media (max-width: 768px){
-       column-gap: 24px; 
-    }
+    justify-content: space-between;
+    column-gap: 18px;
   }
 
   &__column {
     display: flex;
     flex-direction: column;
-    row-gap: 24px;
+    row-gap: 18px;
     margin-top: 52px;
     &--middle {
       margin-top: 0;
@@ -62,27 +42,17 @@
     transform: translate(0px, 50%);
     opacity: 0;
     transition: all 0.8s ease 0s;
-    width: 456px;
-    @media (max-width: 1024px){
-      width: 304px; 
-    }
-    @media (max-width: 768px){
-      width: 352px; 
-    }
-    @media (max-width: 425px) {
-       width: 178px; 
-    }
   }
 
   &__shadow {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 360px;
+    //height: 360px;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+    @include adaptive-clamp("height", 360, 260);
   }
 }
-
 .animation-gallery {
   opacity: 1;
   transform: translate(0px, 0px);
