--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -2,20 +2,8 @@
 @use "../config/mixins" as *;
 
 [class*="page__"] {
-    //@include adaptive-clamp("padding-top", 75, 35);
-    //@include adaptive-clamp("padding-bottom", 75, 35);
-    padding-top: 75px;
-    padding-bottom: 75px;
-    @media (max-width: 1025px){
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
-    @media (max-width: 767.98px){
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-    @media (max-width: 450px){
-    }
+    @include adaptive-clamp("padding-top", 75, 35);
+    @include adaptive-clamp("padding-bottom", 75, 35);
 }
 .page {
     &__welcome {}
