--- a/src/styles/blocks/_second.scss
+++ b/src/styles/blocks/_second.scss
@@ -1,124 +1,79 @@
-//@use "../config/variables" as global;
- @use "../config/functions" as *;
+@use "../config/functions" as *;
 @use "../config/mixins" as *;
-//@use '../config/root' as *;
 
 .visiting {
-
-		&__container {
-		}
-		&__header-block {
-      &:not(:last-child) {
-        margin-bottom: 75px;
-      }
-      @media (max-width: 1025px){
-        &:not(:last-child) {
-          margin-bottom: 60px;
-        }
-      }
-		}
-		&__title {
-		}
-		&__cards {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      row-gap: 70px;
-      column-gap: 60px;
-      @media (max-width: 1440px){
-        justify-content: center;
-        column-gap: 108px;
-        row-gap: 58px;          
-      }
-      @media (max-width: 1023px) {
-        column-gap: 56px;
-        row-gap: 40px;
-      }
-      @media (max-width: 767.98px) {
-        row-gap: 40px;
-      }
-
-		}
-		&__card {
-		}
+  &__container {
+  }
+  &__header-block {
+    &:not(:last-child) {
+      @include adaptive-clamp("margin-bottom", 75, 25);
+    }
+  }
+  &__title {
+  }
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 16px;
+    @include adaptive-clamp("row-gap", 60, 16);
+    @media (max-width: 991.98px) {
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+    @media (max-width: 620px) {
+      grid-template-columns: minmax(280px, 100%);
+      justify-content: center;
+    }
+  }
+  &__card {
+  }
 }
-
 .card-visiting {
-    color: var(--c-dark);
-    transition: all 0.3s;
-    @media (any-hover: hover){
-      &:hover{
-        filter: grayscale(50%);
-      }
-    } 
-    &__image {
-      width: 440px;
-      height: 285px;
-      &:not(:last-child) {
-        margin-bottom: 25px;
-      }
-      @media (max-width: 1440px) {
-        width: 330px;
-        height: 215px;
-        &:not(:last-child) {
-          margin-bottom: 22px;
-        }
-      }
-      @media (max-width: 1023.98px) {
-        width: 280px;
-        height: 180px;
-        &:not(:last-child) {
-          margin-bottom: 20px;
-        }
-      }
+  max-width: 440px;
+  margin: 0 auto;
+  color: var(--c-dark);
+  transition: all 0.3s;
+  @media (any-hover: hover){
+    &:hover{
+      filter: grayscale(50%);
     }
-    &__img {
+  } 
+  &__image {
+    width: 100%;
+    aspect-ratio: 440 / 285;
+    &:not(:last-child) {
+      @include adaptive-clamp("margin-bottom", 25, 18);
     }
-    &__title {
-      font-family: var(--ff-secondary);
-      font-weight: 400;
-      font-size: 32px;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      position: relative;
-      &:not(:last-child) {
-        margin-bottom: 22px;
-      }
-      &::before{
-        position: absolute;
-        content:'';
-        bottom: -10px;
-        left: 0;
-        height: 2px;
-        width: 68%;
-        background-color: var(--c-dark-red);
-        transition: all 0.3s;
-      }
-      @media (max-width: 1440px) {
-        font-size: 28px;
-      }
-      @media (max-width: 1023.98px) {
-        font-size: 22px;
-      }
+  }
+  &__img {
+  }
+  &__title {
+    position: relative;
+    font-family: var(--ff-secondary);
+    font-weight: 400;
+    letter-spacing: 0.16em;
+    text-transform: uppercase;
+    @include adaptive-clamp("font-size", 32, 22);
+    &:not(:last-child) {
+      margin-bottom: 20px;
     }
-    &__google {
-      font-size: 18px;
-      @media (max-width: 1440px) {
-        font-size: 16px;
-      }
-      @media (max-width: 1023.98px) {
-      }
+    &::before{
+      position: absolute;
+      content:'';
+      bottom: -10px;
+      left: 0;
+      height: 2px;
+      width: 68%;
+      background-color: var(--c-dark-red);
+      transition: all 0.3s;
     }
-    &__descr {
-      font-weight: 100;
-      font-size: 22px;
-      @media (max-width: 1440px) {
-        font-size: 20px;
-      }
-      @media (max-width: 1023.98px) {
-        font-size: 18px;
-      }
-    }
+  }
+  &__google {
+    font-size: 18px;
+  }
+  &__descr {
+    font-weight: 100;
+    @include adaptive-clamp("font-size", 22, 18);
+  }
 }
 .card-visiting:hover {
   .card-visiting__title::before {
