--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -6,46 +6,31 @@
   &__container {
   }
   &__header-block {
-    @include adaptive-clamp("margin-bottom", 75, 40);
+    @include adaptive-clamp("margin-bottom", 75, 25);
   }
   &__title {
   }
   &__content {
     display: grid;
     grid-template-columns: 50% 45%;
-    @include adaptive-clamp("gap", 60, 30);
-    @media (max-width: em(920)){
-       grid-template-columns: auto;
+    @include adaptive-clamp("gap", 60, 25);
+    @media (max-width: em(1100)){
+      grid-template-columns: auto;
+      justify-items: center;
     }
   }
   &__image {
-    max-width: 720px;
     width: 100%;
-    @media (max-width: em(920)){
-      margin: 0 auto;        
-    }
-    @media (max-width: em(767.98)){
-       max-width: 500px; 
-    }
-    @media (max-width: em(550)){
-       max-width: 380px; 
-    }
-    @media (max-width: em(425)){
-       max-width: 280px; 
-    }
+    max-width: clamp(280px, 80vw, 720px);
   }
   &__booking {
     display: flex;
     flex-wrap: wrap; 
     justify-content: space-between;
     gap: 20px;
-    @media (max-width: em(920)){
-      justify-content: space-around;
-    }
     @media (max-width: em(500)){
        flex-direction: column;
-       align-items: center;
-       justify-content: center; 
+       align-items: start;
     }
   }
   &__amount {
@@ -54,14 +39,10 @@
   }
 }
 .slider-tickets {
-
   &__swiper {
   }
-
   &__wrapper {
-
   }
-
   &__slide {
     aspect-ratio: 720 / 550;
     position: relative;
@@ -75,15 +56,13 @@
     }
   }
 }
-
 .type-tickets {
-
   &__title {
     font-weight: 700;
     font-size: 28px;
+    @include adaptive-clamp("font-size", 28, 20);
     @include adaptive-clamp("margin-bottom", 50, 25);
   }
-
   &__label {
     display: flex;
     align-items: center;  
@@ -92,12 +71,9 @@
       margin-bottom: 25px;
     }
   }
-
   &__span {
   }
-
   &__input {
-
     &--radio {
       width: 17px;
       height: 17px;
@@ -108,21 +84,16 @@
   }
 }
 .amount {
-  min-width: 210px;
+  min-width: 210px;//для отоброжения цены
   &__title {
     margin-bottom: 25px;
-    text-align: end;
     font-weight: 700;
-    font-size: 28px;
-    @media (max-width: em(500)){
-     text-align: start; 
-    }
+    @include adaptive-clamp("font-size", 28, 20);
+    @include adaptive-clamp("margin-bottom", 25, 15);
   }
-
   &__subtitle {
     margin-bottom: 13px;
   }
-
   &__stepper {
     width: 150px;
     display: flex;
@@ -143,8 +114,8 @@
 
   &__price {
     font-weight: 700;
-    font-size: 28px;
     letter-spacing: 1.65px;
+    @include adaptive-clamp("font-size", 28, 20);
     @include adaptive-clamp("margin-top", 35, 20);
     @include adaptive-clamp("margin-bottom", 58, 25);
   }
@@ -152,7 +123,6 @@
   &__btn {
     @media (max-width: em(500)){
       width: 100%;
-      //display: flex;  
     }
   }
 }
