fix: fix adaptive booking

--- a/src/styles/blocks/_booking.scss
+++ b/src/styles/blocks/_booking.scss
@@ -319,7 +319,7 @@
 		&__total-price {
 		}
 }
-.card {
+/* .card {
   position: relative;
   font-weight: 400;
   font-size: 12px;
@@ -425,7 +425,7 @@
 
   &__info {
   }
-}
+} */
 
 .stappers-booking {
   font-weight: 400;
