--- a/src/styles/base/_bank-card.scss
+++ b/src/styles/base/_bank-card.scss
@@ -17,7 +17,7 @@
     z-index: 1;
     background: #bcbcbc;
     padding: 15px 20px 25px 20px;
-    border-radius: 8px;
+    border-radius: 12px;
     max-width: 360px;
     @media (max-width: em(500)){
       max-width: 100%; 
@@ -59,6 +59,8 @@
   }
 
   &__back {
+    display: none;//=================
+
     position: absolute;
     top: 30px;
     right: 0;
