--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -29,7 +29,7 @@
     justify-content: center;
     transition: all 0.3s;
     padding: 12px 16px;
-    border-radius: 2px;
+    border-radius: 5px;
     background-color: var(--c-dark);
     color: var(--c-white);
     font-weight: 300;
@@ -64,6 +64,11 @@
 
     &--long {
         padding: 11px 85px;
+    }
+
+    @media (max-width: 500px) {
+        //width: 100%;
+        //display: flex;
     }
 }
 
