--- a/src/styles/blocks/_booking.scss
+++ b/src/styles/blocks/_booking.scss
@@ -70,7 +70,7 @@
   border: 1px solid #000;
   padding: 25px 30px;
   @media (max-width: em(500)){
-      padding: 12px 12px;
+      padding: 8px 8px;
   }
 
   &__top {
@@ -85,22 +85,22 @@
 
   &__content {
     &:not(:last-child) {
-      margin-bottom: 22px;
+      @include adaptive-clamp("margin-bottom", 22, 18);
     }
   }
 
   &__title {
-    font-size: 32px;
     font-weight: 500;
+    @include adaptive-clamp("font-size", 32, 20);    
     &:not(:last-child) {
       margin-bottom: 4px;
     }
   }
 
   &__subtitle {
-    font-size: 22px;
     font-weight: 500;
     color: var(--c-dark-red);
+    @include adaptive-clamp("font-size", 22, 20);
     &:not(:last-child) {
      margin-bottom: 10px; 
     }
@@ -149,11 +149,15 @@
   }
 
   &__card {
-    margin-bottom: 45px;
+    @include adaptive-clamp("margin-bottom", 45, 20);
 	}
 
   &__btn {
-    margin: 0 0 0 auto;
+    @media (max-width: em(500)){
+      display: flex;
+      width: 100%;
+        
+    }
   }
 }
 .slider-overwiev {
@@ -319,113 +323,6 @@
 		&__total-price {
 		}
 }
-/* .card {
-  position: relative;
-  font-weight: 400;
-  font-size: 12px;
-  color: #161615;
-
-  input {
-    background-color: #fff;
-    padding: 0 10px;
-    height: 35px;
-  }
-  &__front {
-    position: relative;
-    z-index: 1;
-    background: #bcbcbc;
-    padding: 15px 20px 25px 20px;
-    border-radius: 8px;
-    max-width: 360px;
-    @media (max-width: em(500)){
-      max-width: 100%; 
-      padding: 8px 12px 15px 12px; 
-    }
-
-    img {
-      position: absolute;
-      top: 34px;
-      right: 20px;
-    }
-
-    p {
-      margin-bottom: 5px;
-    }
-  }
-
-  &__number {
-    width: 67%;
-    margin-bottom: 10px;
-  }
-
-  &__date {
-    display: flex;
-    gap: 15px;
-    margin-bottom: 10px;
-  }
-
-  &__month {
-    width: 31%;
-  }
-
-  &__year {
-    width: 31%;
-  }
-
-  &__name {
-    width: 100%;
-  }
-
-  &__back {
-    //display: none;
-
-    position: absolute;
-    top: 30px;
-    right: 0;
-    width: 360px;
-    @media (max-width: em(500)){
-      display: none;
-    }
-  }
-
-  &__wrapper {
-    background: #939393;
-    border-radius: 8px;
-    max-width: 360px;
-    height: 211px;
-    position: relative;
-  }
-
-  &__line {
-    position: absolute;
-    top: 25px;
-    right: 0;
-    width: 100%;
-    height: 45px;
-    background: #161615;
-  }
-
-  &__cvv {
-    position: absolute;
-    right: 20px;
-    bottom: 15px;
-    max-width: 75px;
-
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-
-    p {
-      display: block;
-    }
-  }
-
-  &__text {
-  }
-
-  &__info {
-  }
-} */
 
 .stappers-booking {
   font-weight: 400;
