--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -70,8 +70,8 @@
     padding: 11px 85px;
   }
 
-  @media (width <= 500px) {
-    // width: 100%;
-    // display: flex;
-  }
+  // @media (width <= 500px) {
+  //   // width: 100%;
+  //   // display: flex;
+  // }
 }
