--- a/src/styles/base/_bank-card.scss
+++ b/src/styles/base/_bank-card.scss
@@ -61,49 +61,6 @@
   }
 
   &__back {
-    display: none; // =================
-
-    // position: absolute;
-    // top: 30px;
-    // right: 0;
-    // width: 360px;
-  } /* 
-
-  &__wrapper {
-    background: #939393;
-    border-radius: 8px;
-    max-width: 360px;
-    height: 211px;
-    position: relative;
+    display: none;
   }
-
-  &__line {
-    position: absolute;
-    top: 25px;
-    right: 0;
-    width: 100%;
-    height: 45px;
-    background: #161615;
-  }
-
-  &__cvv {
-    position: absolute;
-    right: 20px;
-    bottom: 15px;
-    max-width: 75px;
-
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-
-    p {
-      display: block;
-    }
-  }
-
-  &__text {
-  }
-
-  &__info {
-  } */
 }
