--- a/src/styles/config/_setting.scss
+++ b/src/styles/config/_setting.scss
@@ -43,6 +43,7 @@ body {
 
 body.lock {
   // touch-action: none;
+  touch-action: none;
   overflow: hidden;
 }
 
@@ -64,22 +65,22 @@ body.lock {
   padding-inline: rem(global.$main-offset);
 }
 
-.iframe-wrapper {
-  // у iframe удалить ширину, высоту и style
-  // position: relative;
-  // aspect-ratio: 452 / 254;
-  // padding-bottom: 56.25%; /* Соотношение сторон 16:9 */
-  // height: 0;
-  // overflow: hidden;
-  iframe {
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
-    // height: 100%;
-    // border: 0;
-  }
-}
+// .iframe-wrapper {
+//   // у iframe удалить ширину, высоту и style
+//   // position: relative;
+//   // aspect-ratio: 452 / 254;
+//   // padding-bottom: 56.25%; /* Соотношение сторон 16:9 */
+//   // height: 0;
+//   // overflow: hidden;
+//   iframe {
+//     // position: absolute;
+//     // top: 0;
+//     // left: 0;
+//     // width: 100%;
+//     // height: 100%;
+//     // border: 0;
+//   }
+// }
 
 .map {
   // у iframe удалить ширину, высоту и style
